--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <link rel="stylesheet" href="assets/css/comfort-home-styles.css" type="text/css">
     <link rel="stylesheet" href="assets/css/fonts-styles.css" type="text/css">
     <link rel="stylesheet" href="assets/css/comfort-house-responsiveness.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Hanken+Grotesk:wght@200;300;400;500;600;700;800&family=Inter:wght@300;400;500;600;700;800;900&family=Manrope:wght@300;400;500;600;700;800&family=Montserrat:wght@100;200;400;500;600;700&family=Oswald:wght@400;600&family=Playfair+Display:wght@500;600;700;800&family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!--<script>
         var url = window.location.href
         var newUrl = url.replace("index.php", "Homepage")
@@ -55,7 +58,7 @@
     </style>
 
 </head>
-<body style="font-family: Proxima Nova">
+<body style="font-family: Inter">
 
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
                   role="banner" class="navigation">
