--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </style>
 
 </head>
-<body style="font-family: Inter">
+<body style="font-family: Proxima Nova">
 
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
                   role="banner" class="navigation">
